fix for college page field option going off screen in static and dynamic pages - 64698802

--- a/app/assets/stylesheets/static/college.css.scss
+++ b/app/assets/stylesheets/static/college.css.scss
@@ -197,6 +197,10 @@ $green: #00c088;
         }
       }
     }
+    .gentleselect-dialog {
+      overflow-y: scroll;
+      height: 200px;
+    }
   }
 
   .club-updates {
